fix(filters): Make `Clear Filters` button secondary
The `Clear Filters` button was originally a `warning` button,
which was too eye catching for its purpose. I have changed it
to a secondary button which makes it stand out much less, compared
to the other button.

IssueID #NCEA-172

--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -28,7 +28,7 @@
               Filters
             </h2>
             <div class="filters-buttons">
-              <button type="reset" class="govuk-button govuk-button--warning" data-module="govuk-button" form="filters-{{filterInstance}}" id="filters-reset-{{filterInstance}}" data-reset-url="{{dspFilterReset}}">
+              <button type="reset" class="govuk-button govuk-button--secondary" data-module="govuk-button" form="filters-{{filterInstance}}" id="filters-reset-{{filterInstance}}" data-reset-url="{{dspFilterReset}}">
                 Clear Filters
               </button>
               <button type="submit" class="govuk-button" data-module="govuk-button" form="filters-{{filterInstance}}">
