WIP feat(frontend): Some Title text
Describe why you did what you did

IssueID #

--- a/src/views/partials/go_to_resource/template.njk
+++ b/src/views/partials/go_to_resource/template.njk
@@ -15,4 +15,4 @@
   {% set openDataAttributes = openDataAttributes | merge({disabled: "true"}) %}
 {% endif %}
 
-{{ govukButton({ text: 'Go to resource', attributes: openDataAttributes, classes: buttonClasses, isStartButton: params.isDetailsPage }) }}
+{{ govukButton({ text: 'Go to My resource', attributes: openDataAttributes, classes: buttonClasses, isStartButton: params.isDetailsPage }) }}
