feat(filters): Make scope buttons refresh automatically
When the filters were updated to use buttons to submit instead of
submitting automatically, that also meant the scope buttons did not.
We discovered this wasnt very user friendly as they could pointlessly
select filters that would be removed once submitting.

We decided that the scope buttons should not be classed as filters
and should have their own heading. This means they should also
have different behaviour to the filters which allows them to
automatically apply when changed.
If you have filters select that are not applied when you change scope,
those filters will be applied.

The map view now also has the 2 different headings for the dat
scope and filters.

IssueID #NCEA-182

--- a/src/views/partials/results/map_results.njk
+++ b/src/views/partials/results/map_results.njk
@@ -53,7 +53,7 @@
     </div>
     <div class="filter-view-block-container">
       <div class="filter-view-block govuk-!-padding-4">
-        <h2 class='govuk-heading-m'>
+        <h2 class='govuk-heading-m filter-heading'>
           Key and filters
         </h2>
         <div class="govuk-section-break--visible"></div>
@@ -78,7 +78,7 @@
           }) }}
         </div>
         <div id="defra-bounding-box-info" class="govuk-!-margin-bottom-2">Filter your results to reduce the number of bounding boxes</div>
-        <div class="govuk-section-break--visible"></div>
+
         <div data-search-results-url="{{routes.searchResults}}"></div>
         <div id="map-filter-block" data-action="{{routes.getMapFilters}}" data-fetch-map-filters></div>
       </div>
