--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -160,8 +160,8 @@
             id: "filters-"+dspFilterNames.keywords+"-"+filterInstance,
             name: dspFilterNames.keywords
           }) }}
-            
-          <div class="filter-options__keyboard-filter-content">
+
+          <div class="filter-options__keyboard-filter-content-{{filterInstance}}">
               <ul class="filter-options__keyboard-filter-list" id="keyboard-filter-list">
               </ul>
           </div>
