feat(frontend): Create Atom feed page. 	- I have created the new page called "/feeds", for this added the model, view and controler functions.
	- Controler function "FeedsController" it handles the request i.e it fetches the atom feeds from the available
	  feed urls in the array "atomFeeds" and processes the feeds data generates new data formate which is required for the view.

	- I have created the new utility function called "getFeedsData" which will responsible to process the feeds data and returns
	 the feed title and repective feed articles.

Issued Id: NCEA-189.

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -165,6 +165,10 @@
           text: "Help"
         },
         {
+          href: routes.feeds,
+          text: "Feeds"
+        },
+        {
           href: routes.privacyPolicy,
           text: "Privacy"
         },
