--- a/src/assets/sass/_root.scss
+++ b/src/assets/sass/_root.scss
@@ -18,3 +18,4 @@ $govuk-assets-path: '/natural-capital-ecosystem-assessment/assets/';
 @import './templates/geography';
 @import './templates/results';
 @import './templates/details';
+@import './templates/feeds';
