--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -165,11 +165,59 @@
 .map-view-block {
   width: 75%;
   height: 100vh;
+  position: relative;
 }
 
 .filter-view-block-container {
   height: 100vh;
   overflow: hidden;
+}
+
+.cluster-list {
+  position: absolute;
+  right: 0;
+  z-index: 9999;
+  background: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  max-width: 35%; // without a max-width a long title will cause the panel to cover most of or the whole map
+
+  // extra container to prevent the padding causing overflow due to it being
+  // absolutely positioned
+  .container {
+    height: 100%;
+    padding: 1rem;
+
+    .heading {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.2rem;
+
+        .close {
+          all: unset;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .records {
+      padding: 0;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      height: 100%;
+      overflow-y: auto;
+    }
+  }
 }
 
 .filter-view-block {
@@ -181,7 +229,7 @@
 .defra-map {
   &-controls {
     position: absolute;
-    width: 75%;
+    width: 100%;
     z-index: 1;
     overflow: hidden;
     top: 0px;
@@ -619,10 +667,10 @@
 }
 
 .filter-options__keyboard-filter-content-search_results {
-  @include keyword-filter-dropdown
+  @include keyword-filter-dropdown;
 }
 .filter-options__keyboard-filter-content-map_results {
-  @include keyword-filter-dropdown
+  @include keyword-filter-dropdown;
 }
 
 @mixin keyword-filter-list-items {
@@ -641,11 +689,11 @@
 }
 
 .filter-options__keyboard-filter-content-search_results {
-  @include keyword-filter-list-items
+  @include keyword-filter-list-items;
 }
 
 .filter-options__keyboard-filter-content-map_results {
-  @include keyword-filter-list-items
+  @include keyword-filter-list-items;
 }
 
 .keywords-filter-dropdown {
