feat(frontend): added the about route with logo text and cards macro component

--- a/src/assets/sass/_root.scss
+++ b/src/assets/sass/_root.scss
@@ -19,3 +19,4 @@ $govuk-assets-path: '/natural-capital-ecosystem-assessment/assets/';
 @import './templates/results';
 @import './templates/details';
 @import './templates/feeds';
+@import './templates/about'
