feat(frontend): updated the bg color for cards

--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -22,7 +22,7 @@
         gap: 20px;
         justify-content: center;
         &-card {
-          background-color: #2d665a;
+          background-color: #008938;
           color: black;
           overflow: hidden;
           flex: 1 1 calc(25% - 15px);
