feat(frontend): updated css class names

--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -1,7 +1,7 @@
 .landingPage {
     &__header {
       padding: 1rem 0rem;
-      &__heading {
+      &-heading {
         align-items: flex-start;
         display: flex;
         flex-direction: column-reverse;
@@ -54,7 +54,7 @@
     @media only screen and (min-width: 769px) {
       padding: 1rem 0rem;
       &__header {
-        &__heading {
+        &-heading {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
@@ -64,7 +64,7 @@
       &__intro {
         gap: 2rem;
         flex-direction: row;
-        &__img {
+        &-img {
           width: 45%;
           max-height: max-content;
         }
