feat(frontend): Licence badge does not display. 	- I have renames the dspFilterOptions.license to dspFilterOptions.licence, Its a typo error and fixed it.
Issued Id: NCEA-210.

--- a/src/views/partials/results/badges.njk
+++ b/src/views/partials/results/badges.njk
@@ -23,8 +23,8 @@
   {{ badge("Date After", dspFilterOptions.lastUpdated.afterYear) }}
 {% endif %}
 
-{% if (dspFilterOptions.license | length) > 0 %}
-  {{ badge("License", dspFilterOptions.license) }}
+{% if (dspFilterOptions.licence | length) > 0 %}
+  {{ badge("License", dspFilterOptions.licence) }}
 {% endif %}
 
 {% for keyword in dspFilterOptions.keywords %}
