--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -119,7 +119,7 @@
         {{ govukInput({
           id: "filters-"+dspFilterNames.licence+"-"+filterInstance,
           name: dspFilterNames.licence,
-          value: dspFilterOptions.license
+          value: dspFilterOptions.licence
         }) }}
       </div>
     </div>
