feat(frontend): added the partner links and logs quick links feeds section

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -49,7 +49,7 @@
     <section class="landingPage__feedlinks">
      <div class="landingPage__feeds_container">
       <div class="landingPage__feeds_container--feeds">
-         <a href="{{ basePath }}/feeds" class="govuk-link govuk-link--no-underline landingPage__newsletter--text" >Feeds</a>
+         <a href="{{ routes.homePage }}/feeds" class="govuk-link govuk-link--no-underline landingPage__newsletter--text" >Feeds</a>
       </div>
         <div class="landingPage__links_container">
           <div class="landingPage__links_container-heading"><h2>Quick Links</h2></div>
