--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -77,11 +77,15 @@
             background: #fff;
             margin-top: 20px;
           }
-          img:nth-child(1) {
-            padding-left: 10px;
+          a:nth-child(1) {
+            img {
+              padding-left: 10px;
+            }
           }
-          img:nth-child(2), img:nth-child(3), img:nth-child(4){
-            padding: 6px;
+          a:nth-child(2), a:nth-child(3), a:nth-child(4){
+            img {
+              padding: 6px;
+            }
           }
         }
       }
@@ -161,4 +165,15 @@
         }
       }
     }
+
+    @media screen and (max-width: 850px) {
+      &__partnersLogo {
+        &-leftsection {
+          &--logos {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+          }
+      }
+    }
+   }
   }
