feat(frontend): Add navigation to header. 	- I have add the /about and /feeds navigation links to the header. 	- I used the gov-uk design system of 'service-navigation' component, which will take the array of objects of link details as 	    {text: '/about', href: 'link'}.
	- I defined the all the nav links in the constants.ts file, we can add and remove the links at single place here.
	- I have added the javascript function on document load, which will handle the link active indication on client side.

Issued Id: NCEA-213.

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -1,6 +1,7 @@
 {% extends "govuk/template.njk" %}
 
 {% from "govuk/components/header/macro.njk" import govukHeader %}
+{% from "govuk/components/service-navigation/macro.njk" import govukServiceNavigation %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
 
@@ -72,7 +73,9 @@
       serviceUrl: routes.homePage,
       useTudorCrown: true
     }) }}
-
+    {{ govukServiceNavigation({
+      navigation: headerNavigationLinks
+    }) }}
     <div class="govuk-grid-col login">
       {% if user %}
         <p class="govuk-body-m">Welcome, {{ user.email }}</p>
