--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -64,7 +64,7 @@
         padding: 20px;
         text-align: center;
         h2 {
-          margin-bottom: 15px;
+          color: white;
         }
         &--logos {
           display: grid;
@@ -102,10 +102,6 @@
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
           }
         }
-        h2 {
-          color: #2c3e50;
-          margin-bottom: 15px;
-        }
       }
     }
     &__feedlinks {
@@ -114,13 +110,21 @@
     &__feeds_container {
       display: flex;
       justify-content: center;
+      gap: 10%;
       &--feeds {
-        width: 50%;
+        width: 70%;
         margin: auto;
-        text-align: center;
+        padding: 10px;
+        text-align: left;
           button {
             width: 200px
           }
+        &-text {
+          text-align: right;
+        }
+        &-list {
+          padding: 0;
+        }
       }
     }
     &__links_container {
@@ -164,6 +168,16 @@
           max-height: max-content;
         }
       }
+      &__feeds_container {
+        &--feeds {
+          &-list {
+            padding: 0;
+          }
+          .govuk-width-container{
+            margin: 0;
+          }
+        }
+      }
     }
 
     @media screen and (max-width: 850px) {
@@ -173,6 +187,16 @@
             display: grid;
             grid-template-columns: repeat(1, 1fr);
           }
+      }
+    }
+    &__feeds_container {
+      &--feeds {
+        &-list {
+          padding: 0;
+        }
+        .govuk-width-container{
+          margin: 0;
+        }
       }
     }
    }
