--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -48,25 +48,27 @@
     </section>
     <section class="landingPage__feedlinks">
      <div class="landingPage__feeds_container">
-      <div class="landingPage__feeds_container--feeds">
-        <h2 class="govuk-heading-m">{{feedsList.title}}</h2>
-        <ul class="govuk-list">
-          {% for article in feedsList.articles %}
-            <li class="govuk-width-container feed-container landingPage__feeds_container--feeds-list">
-              <h3 class="govuk-heading-s">{{ article.title }}</h3>
-               <div class="captions-section">
-                  <small><b>Author: </b>{{ article.author }}</small>
-                  <small><b>Published on : </b>{{ article.pubDate }}</small>
-                </div>
-              <p class="govuk-body">{{ article.summary }}</p>
-              <a href="{{ article.link }}" target="_blank">{{ article.title }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-        <p class="govuk-body landingPage__feeds_container--feeds-text">
-          <a href="{{routes.homePage}}/feeds" class="govuk-link">More Feeds</a>
-        </p>
-      </div>
+      {% if displayFeedsPanel %}
+        <div class="landingPage__feeds_container--feeds">
+          <h2 class="govuk-heading-m">{{feedsList.title}}</h2>
+          <ul class="govuk-list">
+            {% for article in feedsList.articles %}
+              <li class="govuk-width-container feed-container landingPage__feeds_container--feeds-list">
+                <h3 class="govuk-heading-s">{{ article.title }}</h3>
+                <div class="captions-section">
+                    <small><b>Author: </b>{{ article.author }}</small>
+                    <small><b>Published on : </b>{{ article.pubDate }}</small>
+                  </div>
+                <p class="govuk-body">{{ article.summary }}</p>
+                <a href="{{ article.link }}" target="_blank">{{ article.title }}</a>
+              </li>
+            {% endfor %}
+          </ul>
+          <p class="govuk-body landingPage__feeds_container--feeds-text">
+            <a href="{{routes.homePage}}/feeds" class="govuk-link">More Feeds</a>
+          </p>
+        </div>
+      {% endif %}
         <div class="landingPage__links_container">
           <div class="landingPage__links_container-heading"><h2 class="govuk-heading-m">Quick Links</h2></div>
            <div class="landingPage__links_container-quicklinks">
